--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"scripts": {
-		"watch": "onchange --kill solutions/\\*\\*/\\*.{js,ts} -- node runner.js '{{changed}}'",
-		"prettierwatch": "onchange solutions/\\*\\*/\\*.{js,ts,md,json} \\*.{js,md,json} -- prettier --write '{{changed}}'",
+		"watch": "onchange --kill */solutions/\\*\\*/\\*.{js,ts} -- node runner.js '{{changed}}'",
+		"prettierwatch": "onchange */solutions/\\*\\*/\\*.{js,ts,md,json} \\*.{js,md,json} -- prettier --write '{{changed}}'",
 		"go": "node setup.js"
 	},
 	"dependencies": {
