--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
 		"@babel/plugin-transform-modules-commonjs": "^7.7.5",
 		"@babel/preset-typescript": "^7.7.4",
 		"@types/node": "^12.12.17",
+		"@typescript-eslint/eslint-plugin": "^4.9.0",
+		"@typescript-eslint/parser": "^4.9.0",
+		"eslint": "^7.14.0",
 		"onchange": "^6.1.0",
-		"prettier": "^1.19.1"
+		"prettier": "^1.19.1",
+		"typescript": "^4.1.2"
 	}
 }
