--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@typescript-eslint/eslint-plugin": "^4.9.0",
 		"@typescript-eslint/parser": "^4.9.0",
 		"eslint": "^7.14.0",
+		"node-fetch": "^2.6.1",
 		"onchange": "^6.1.0",
 		"prettier": "^1.19.1",
 		"typescript": "^4.1.2"
