--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.7.5",
+		"@babel/plugin-proposal-pipeline-operator": "^7.16.0",
 		"@babel/plugin-syntax-bigint": "^7.7.4",
 		"@babel/plugin-transform-modules-commonjs": "^7.7.5",
 		"@babel/preset-typescript": "^7.7.4",
