--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 	},
 	"devDependencies": {
 		"@types/node": "^16.11.12",
-		"node-fetch": "^3.1.0",
+		"node-fetch": "2",
 		"onchange": "^7.1.0",
 		"prettier": "^2.5.1",
 		"typescript": "^4.5.3"
